[tool.poetry]
name = "MoeGoe"
version = "0.1.0"
description = ""
authors = ["Lancercmd <lancercmd@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10,<3.12"
torch = "~1.11.0"
scipy = "^1.9.0"
numba = "^0.56.0"
librosa = "^0.9.2"
openjtalk = "^0.3.0.dev2"
jamo = "^0.4.1"
Unidecode = "^1.3.4"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
pypinyin = "^0.47.1"
jieba = "^0.42.1"
cn2an = "^0.5.17"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
